# meteostation-backend

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
app/: __init__.py  __main__.py
app/config/: __init__.py  default.py  utils.py
app/db/alembic/: env.py
app/db/alembic/versions/: 2025_05_21_1833-6b01625ca9a1_.py  2025_05_22_0245-6a78a8667cc4_.py
app/db/connection/: __init__.py  session.py
app/db/models/: __init__.py  setting.py  weather.py
app/endpoints/: __init__.py  setting.py  telegram.py  weather.py
app/schemas/: __init__.py  setting.py  weather.py
app/utils/common/: __init__.py  get_backup.py  get_weather.py  hostname.py
app/utils/queries/: __init__.py  setting.py  weather.py
app/utils/telegram/: __init__.py  bot.py  handlers.py
app/utils/weather_predict/: __init__.py  predict.py
docker/: Dockerfile  fill_data.sql  server-entrypoint.sh
docker/nginx/: cert.pem  default.conf
