[tool.poetry]
name = "Meteostation"
version = "0.1.0"
description = "FastApi Web Service Meteostation"
license = "Apache-2.0"
authors = ["Artur Agishev <finstape@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
starlette = "^0.46.2"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.1"
uvicorn = "^0.34.2"
asyncpg = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}
joblib = "^1.5.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
httpx = "^0.28.1"
async-lru = "^2.0.5"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
aiogram = "^3.20.0.post0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
isort = "^5.13.2"
black = "^25.1.0"
pytest = "^7.4.0"

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic", "uvicorn", "starlette"]
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
lines_between_types = 1
combine_as_imports = true
force_single_line = false

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
exclude = [
  ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache",
  ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
  ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv",
  ".gitignore", ".env", ".env.example", ".toml", ".lock", "Makefile", ".md"
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "B",  # bugbear
  "UP",  # pyupgrade
  "SIM",  # simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true